5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1578_1332.log
== SUBMITION (2019-03-13 09:06:17) 
-- CODE:
aresta =2**2
area = 4
 
print(round(area, 4))
-- EXECUTION TIME:
0.219836
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:07:51) 
-- CODE:
aresta =3/2
area = 1.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.168614
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:08:09) 
-- CODE:
aresta =3/2
area = round(1.5)
 
print(round(area, 4))
-- EXECUTION TIME:
0.186118
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:11:47) 
-- CODE:
aresta =3*5**2
area =75
 
print(round(area, 4))
-- EXECUTION TIME:
0.186407
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:12:15) 
-- CODE:
aresta =3/2*3*5**2
area =75
 
print(round(area, 4))
-- EXECUTION TIME:
0.19655
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:12:50) 
-- CODE:
aresta =3/2*3*5**2
area =112.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.166989
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
112.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:13:03) 
-- CODE:
aresta =3/2*3*5**2
area =5
 
print(round(area, 4))
-- EXECUTION TIME:
0.24709
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:13:31) 
-- CODE:
aresta =3/2*3*5**2
area =5cm
 
print(round(area, 4))
-- EXECUTION TIME:
0.118762
-- ERROR:
  File "/home/codebench/codes/1578/1332/main.py", line 2
    area =5cm
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:14:39) 
-- CODE:
aresta =5cm
area =3/2**3*5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.196871
-- ERROR:
  File "/home/codebench/codes/1578/1332/main.py", line 1
    aresta =5cm
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:14:45) 
-- CODE:
aresta =5cm
area =3/2*3*5**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta =5cm
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:15:03) 
-- CODE:
aresta =5
area =3/2*3*5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.178945
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
112.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:15:14) 
-- CODE:
aresta =5
area =3/2*3*5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.203598
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
112.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:15:55) 
-- CODE:
aresta =5
area =3/2*3*5**2
 
print(round(area, 12.99))
-- EXECUTION TIME:
0.190674
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 4, in <module>
    print(round(area, 12.99))
TypeError: 'float' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:19:28) 
-- CODE:
aresta =5
area =3/2%(3) ** 5**2
 
print(round(area, 12.99))
-- EXECUTION TIME:
0.163931
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 4, in <module>
    print(round(area, 12.99))
TypeError: 'float' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:20:15) 
-- CODE:
aresta =5
area =3/2%(3) ** 5**2
 
print(round(area, 12.99))
-- EXECUTION TIME:
0.277273
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 4, in <module>
    print(round(area, 12.99))
TypeError: 'float' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:20:25) 
-- CODE:
aresta =5
area =3/2
 
print(round(area, 12.99))
-- EXECUTION TIME:
0.202438
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 4, in <module>
    print(round(area, 12.99))
TypeError: 'float' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:24:14) 
-- CODE:
aresta = 5
area = A=3/2/3*5**2
 
print(round(area, 12.99))
-- EXECUTION TIME:
0.146972
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 4, in <module>
    print(round(area, 12.99))
TypeError: 'float' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:24:19) 
-- CODE:
aresta = 5
area = A=3/2/3*5**2
 
print(round(area, 12.99))
-- EXECUTION TIME:
0.19514
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 4, in <module>
    print(round(area, 12.99))
TypeError: 'float' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:24:21) 
-- CODE:
aresta = 5
area = A=3/2/3*5**2
 
print(round(area, 12.99))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 12.99))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:55:02) 
-- CODE:
aresta = 5
area = (2/3)*(3**0.5*aresta**2)
 
print(round(area, 12.99))
-- EXECUTION TIME:
0.138775
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 4, in <module>
    print(round(area, 12.99))
TypeError: 'float' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:55:15) 
-- CODE:
aresta = 5
area = (2/3)*(3**0.5*aresta**2)
 
print(round(area,4))
-- EXECUTION TIME:
0.147733
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
28.8675
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:55:23) 
-- CODE:
aresta = 5
area = (2/3)*(3**0.5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.202029
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
28.8675
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:55:39) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.130394
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:27:45) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.170076
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:47:17) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.15387
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
